--- a/carengines.html
+++ b/carengines.html
@@ -58,7 +58,7 @@
         /* Caption text */
 
         .text {
-            color: #f2f2f2;
+            color: #537DF7;
             font-size: 15px;
             padding: 8px 12px;
             position: absolute;
@@ -158,85 +158,85 @@
         <div class="mySlides">
             <div class="numbertext">1 / 12</div>
             <img src="http://www3.autoimg.cn/newsdfs/g13/M09/8E/08/620x0_1_autohomecar__wKgH41gYPeiAF984ABEyXCZvndM134.jpg" style="width:100%">
-            <div class="text"><h1>Top 1</h1></div>
-            <p>Mercedes-Benz B level; failure rate of 2.8%; the average mileage of 41,000 km</p>
+            <div class="text"><h3>Top 1</h3></div>
+            <h3><p>Mercedes-Benz B level; failure rate of 2.8%; the average mileage of 41,000 km</p></h3>
         </div>
 
         <div class="mySlides">
             <div class="numbertext">2 / 12</div>
             <img src="http://www3.autoimg.cn/newsdfs/g13/M14/8E/09/620x0_1_autohomecar__wKgH41gYPfOAY_6qAAXs5gkgxnE509.jpg" style="width:100%">
-            <div class="text">Top 2</div>
-            <p>Mercedes-Benz GLK level; failure rate of 2.9%; the average mileage of 52,000 km</p>
+            <div class="text"><h3>Top 2</h3></div>
+            <h3><p>Mercedes-Benz GLK level; failure rate of 2.9%; the average mileage of 52,000 km</p></h3>
         </div>
 
         <div class="mySlides">
             <div class="numbertext">3 / 12</div>
             <img src="http://www3.autoimg.cn/newsdfs/g13/M07/8E/0A/620x0_1_autohomecar__wKgH41gYPfqADr_8AAP2V6ndTT8676.jpg" style="width:100%">
-            <div class="text">Top 3</div>
-            <p>Mercedes-Benz SLK level; failure rate of 3.1%; the average mileage of 29,000 km</p>
+            <div class="text"><h3>Top 3</h3></div>
+            <h3><p>Mercedes-Benz SLK level; failure rate of 3.1%; the average mileage of 29,000 km</p></h3>
         </div>
 
         <div class="mySlides">
             <div class="numbertext">4 / 12</div>
             <img src="http://www2.autoimg.cn/newsdfs/g8/M13/90/85/620x0_1_autohomecar__wKgH3lgYPgKAGLWXAAGfe9M-9yo425.jpg" style="width:100%">
-            <div class="text">Top 4</div>
-            <p>Mercedes-Benz M-class; failure rate of 3.6%; the average mileage of 61,000 km</p>
+            <div class="text"><h3>Top 4</h3></div>
+            <h3><p>Mercedes-Benz M-class; failure rate of 3.6%; the average mileage of 61,000 km</p></h3>
         </div>
 
         <div class="mySlides">
             <div class="numbertext">5 / 12</div>
             <img src="http://www2.autoimg.cn/newsdfs/g8/M0B/8C/51/620x0_1_autohomecar__wKgHz1gYPgqAQK6DAA3VE2CVnfQ710.jpg" style="width:100%">
-            <div class="text">Top 5</div>
-            <p>Porsche 911; failure rate of 3.6%; the average mileage of 3.1 million km</p>
+            <div class="text"><h3>Top 5<h3></div>
+            <h3><p>Porsche 911; failure rate of 3.6%; the average mileage of 3.1 million km</p></h3>
         </div>
 
         <div class="mySlides">
               <div class="numbertext">6 / 12</div>
               <img src="http://www2.autoimg.cn/newsdfs/g22/M08/6D/4F/620x0_1_autohomecar__wKjBwVgYPhSATwLWAAyHimW0o0g400.jpg" style="width:100%">
-              <div class="text">Top 6</div>
-              <p>Audi Q5; failure rate of 3.7%; the average mileage of 60,000 km</p>
+              <div class="text"><h3>Top 6</h3></div>
+              <h3><p>Audi Q5; failure rate of 3.7%; the average mileage of 60,000 km</p></h3>
           </div>
 
           <div class="mySlides">
               <div class="numbertext">7 / 12</div>
               <img src="http://www3.autoimg.cn/newsdfs/g22/M11/6E/61/620x0_1_autohomecar__wKgFW1gYPhyABL4yAAH9ePlMloA948.jpg" style="width:100%">
-              <div class="text">Top 7</div>
-              <p>Mercedes-Benz C level; failure rate of 3.7%; average mileage of 58,000 km</p>
+              <div class="text"><h3>Top 7</h3></div>
+              <h3><p>Mercedes-Benz C level; failure rate of 3.7%; average mileage of 58,000 km</p></h3>
           </div>
 
           <div class="mySlides">
               <div class="numbertext">8 / 12</div>
               <img src="http://www2.autoimg.cn/newsdfs/g22/M0F/6A/3A/620x0_1_autohomecar__wKgFVlgYPiuARRJBACkaApq7fb4765.png" style="width:100%">
-              <div class="text">Top 8</div>
-              <p>Mercedes-Benz E-class Coupe; failure rate of 4.2%; average mileage of 42,000 km</p>
+              <div class="text"><h3>Top 8<h3></div>
+              <h3><p>Mercedes-Benz E-class Coupe; failure rate of 4.2%; average mileage of 42,000 km</p></h3>
           </div>
 
           <div class="mySlides">
               <div class="numbertext">9 / 12</div>
               <img src="http://www3.autoimg.cn/newsdfs/g11/M00/89/92/620x0_1_autohomecar__wKgH0lgYPjWAC5U3AAecf7f_a7s536.jpg" style="width:100%">
-              <div class="text">Top 9</div>
-              <p>Audi A1; failure rate of 4.4%; the average mileage of 36,000 km</p>
+              <div class="text"><h3>Top 9</h3></div>
+              <h3><p>Audi A1; failure rate of 4.4%; the average mileage of 36,000 km</p></h3>
           </div>
 
           <div class="mySlides">
               <div class="numbertext">10 / 12</div>
               <img src="http://www2.autoimg.cn/newsdfs/g11/M14/8C/B9/620x0_1_autohomecar__wKjBzFgYPj6AfqKLAAYamUe98iM106.jpg" style="width:100%">
-              <div class="text">Top 10</div>
-              <p>Audi A6; failure rate of 4.4%; the average mileage of 8.0 million km</p>
+              <div class="text"><h3>Top 10</h3></div>
+              <h3><p>Audi A6; failure rate of 4.4%; the average mileage of 8.0 million km</p></h3>
           </div>
 
           <div class="mySlides">
               <div class="numbertext">11 / 12</div>
               <img src="http://www2.autoimg.cn/newsdfs/g11/M0F/89/96/620x0_1_autohomecar__wKgH0lgYPkWANguMAAYOMMXEu2c627.jpg" style="width:100%">
-              <div class="text">Top 11</div>
-              <p>Toyota Yaris; failure rate of 4.4%; the average mileage of 3.1 million km</p>
+              <div class="text"><h3>Top 11</h3></div>
+              <h3><p>Toyota Yaris; failure rate of 4.4%; the average mileage of 3.1 million km</p></h3>
           </div>
 
           <div class="mySlides">
               <div class="numbertext">12 / 12</div>
               <img src="http://www2.autoimg.cn/newsdfs/g17/M11/87/06/620x0_1_autohomecar__wKjBxlgYPk6ADYDTAAwfe8ssHZw461.jpg" style="width:100%">
-              <div class="text">Top 12</div>
-              <p>Volvo XC60; failure rate of 4.5%; the average mileage of 65,000 km</p>
+              <div class="text"><h3>Top 12</h3></div>
+              <h3><p>Volvo XC60; failure rate of 4.5%; the average mileage of 65,000 km</p></h3>
           </div>
 
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
